# wxMathPlot

./: ReadMe.md
mathplot/: CMakeLists.txt  Changelog  Dox_footer.html  Doxyfile  Makefile  README  clear_project  mathplot.cpp  mathplot.dsp  mathplot.h  mathplot.sln  mathplot.vcproj  packages.sh
mathplot/debian/: README.Debian  changelog  control  copyright  rules
mathplot/distrib/: Base.spec
mathplot/lib/: README
mathplot/samples/: Makefile  mp1.cpp  mp1.dsp  mp2.cpp  mp2.dsp
mathplot/samples/sample1/: CMakeLists.txt  Makefile.manual  make  mp1.cpp  mp1.dsp  sample1.vcproj
mathplot/samples/sample2/: CMakeLists.txt  Makefile  make  mp2.cpp  mp2.dsp  sample2.vcproj
mathplot/samples/sample3/: CMakeLists.txt  Makefile  make  sample3.cpp  sample3.vcproj
mathplot/samples/sample4/: Sample4.cpp  make
mathplot/www/: screenshots.html
